- fixed bug where waypoints wouldn’t kick in if there was no welcome text - added a smaller breakpoint, so products display 2 per row on ipads and a single column on phones - decreased welcome font size to avoid overlapping - added extra spacing above footer - version bump

--- a/source/stylesheets/_config.css.sass
+++ b/source/stylesheets/_config.css.sass
@@ -1,2 +1,3 @@
 $marginSize: 32px
 $breakpoint-small: 800px
+$breakpoint-xsmall: 500px
