--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -70,7 +70,7 @@ section.content
         width: 50%
 
 
-      @media only screen and (max-width:$breakpoint-small)
+      @media only screen and (max-width:$breakpoint-xsmall)
         max-width: 100%
         margin-bottom: $marginSize/2
         width: 100%
